cambiado response === false por !response

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script>
       window.datosFromServer = `{
         "userMail":"furibe@fundacionnutresa.com",
-        "negocios":["Galletas"],
+        "negocios":["Galletas","Cárnicos"],
         "tablaCompanias":[["Galletas","Noel"],["Galletas","Pozuelo"],["Cárnicos","Alicarnicos"],["Cárnicos","Zenú"]]
       }`
     </script>
